5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/2636/executions/1594_1800.log
== TEST (2019-04-01 19:33:57) 
-- CODE:
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
print(a)
print(b)
print(c)
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:06) 
-- CODE:
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
cima = (a**2 + b**2 + c**2)
baixo = (a+b+c)
print(cima/baixo)
-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:38:46) 
-- CODE:
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
cima = (a**2 + b**2 + c**2)
baixo = (a+b+c)
print(cima/baixo)
-- EXECUTION TIME:
0.133823
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:01) 
-- CODE:
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
cima = (a**2 + b**2 + c**2)
baixo = (a+b+c)

resultado=(cima/baixo)
print(round(resultado,7)
-- ERROR:
File "XXXX", line 9
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:08) 
-- CODE:
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
cima = (a**2 + b**2 + c**2)
baixo = (a+b+c)

resultado=(cima/baixo)
print(round(resultado,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:42:17) 
-- CODE:
a=int(input("a"))
b=int(input("b"))
c=int(input("c"))
cima = (a**2 + b**2 + c**2)
baixo = (a+b+c)

resultado=(cima/baixo)
print(round(resultado,7))
-- EXECUTION TIME:
0.139368
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
